--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc -b && vite build --base=/projects/vue-api-demo",
+    "preview": "vite preview --base=/projects/vue-api-demo"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.5",
     "axios": "^1.7.9",
+    "primevue": "^4.2.5",
     "vue": "^3.5.13"
   },
   "devDependencies": {
